<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admissions"
            android:fontFamily="@font/custom_font"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_join_the_it_department_applicants_must_meet_the_following_requirements"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_csec_subjects_including_mathematics_and_english_n_an_interest_in_computers_and_technology_n_a_completed_application_form"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/for_full_details_visit_the_admissions_page"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvAdmissionsLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/https_ucc_edu_jm_apply_undergraduate"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:autoLink="web"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="24dp" />

</LinearLayout>
